# Employee_App_New

./: .coverage  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: README  env.py
alembic/versions/: 1e0832a3d375_init.py  3491008bfd6e_modified_the_schema_for_employee_added_.py  3e9528e2fc88_created_department_table.py  7d3b301ca000_added_fkey_for_adress_table.py  85e6a9a371c9_added_unique_constraint_to_emp_table.py  a5cdf37191f6_init.py  aaeaaf96df87_created_emp_dep_assoc_table_for_.py  f68ebd16d56d_modifed_emp_table.py
auth/: dependancies.py  router.py  schemas.py  service.py  utils.py
database/: __init__.py  connection.py
departments/: __init__.py  department_repo.py  department_router.py  department_service.py  schemas.py
employees/: __init__.py  employee_repo.py  employee_router.py  employee_service.py  schemas.py
exceptions/: __init__.py  handlers.py
middleware/: __init__.py  logger.py
models/: __init__.py  address.py  department.py  emp_dep_assoc.py  employee.py
tests/: conftest.py  test_auth_utils.py  test_emp_except.py  test_employee_by_id.py  test_employee_by_id_fix.py  test_employee_service.py  test_smoke.py
