[project]
name = "employee-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
    "bcrypt>=5.0.0",
    "python-jose[cryptogrphy]>=3.5.0",
    "greenlet>=3.5.1",
    "python-multipart>=0.0.30",
    "pytest-asyncio>=1.4.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.32.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    # SQLAlchemy's async layer bridges sync ORM internals via greenlet.
    # On some platforms (e.g. Python 3.14) it isn't pulled in transitively.
    "greenlet>=3.0",
]

[tool.poe.tasks]
test ="pytest"
test-cov ="pytest --cov=. --cov-report=html"

[tool.pytest.ini_options]
testpaths      = ["tests"]
           # only walk tests/, not the whole repo
python_files   = ["test_*.py"]
        # files pytest treats as test files
python_classes = ["Test*"]
            # class names that group tests
python_functions = ["test_*"]
